fix: spacing in  header

--- a/css/style-login.css
+++ b/css/style-login.css
@@ -73,6 +73,10 @@ a {
   top: 0;
   width: 100%;
   background-color: rgb(6, 6, 43);
+
+  img {
+    margin-inline-start: 2rem;
+  }
 }
 
 .logo-solvens,
