--- a/css/style-principal.css
+++ b/css/style-principal.css
@@ -44,7 +44,7 @@ body {
 .container-principal {
   display: grid;
   place-items: center;
-  height: 100vh;
+  min-height: 100dvh;
 }
 
 .cont-opciones {
